# cpkg

./: Cargo.toml  LICENSE  README.md  build.rs  database.toml  deny.toml
.github/: dependabot.yml
.github/workflows/: apk.yml  apt.yml  audit.yml  devskim.yml  dnf.yml  pamac.yml  pr.yml  rust.yml  style-check.yml
src/: application.rs  cli.rs  database.rs  error.rs  lib.rs  main.rs  prelude.rs  superuser.rs  utility.rs
src/provider/: apk.rs  apt.rs  dnf.rs  mod.rs  pamac.rs
src/subcommand/: install.rs  mod.rs  reinstall.rs  remove.rs  update.rs
tests/: database.rs  dry_install_all_packages.rs  install.rs  reinstall.rs  remove.rs  update.rs
